[package]
name = "chagpt_backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-cors = { version = "0.6.5", features = ["draft-private-network-access"] }
actix-http = "3.4.0"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
ahash = { version = "0.8.6", features = ["serde"] }
bb8-postgres = { version = "0.8.1", features = ["with-serde_json-1"] }
bytes = { version = "1.5.0", features = ["serde"] }
bytestring = { version = "1.3.1", features = ["serde"] }
futures-util = "0.3.29"
log = { version = "0.4.20", features = ["release_max_level_info"] }
parking_lot = "0.12.1"
pretty_env_logger = "0.5.0"
rand = { version = "0.8.5", features = ["log", "nightly"] }
rand_core = "0.6.4"
reqwest = { version = "0.11.23", features = ["json"] }
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["float_roundtrip"] }
tokio = { version = "1.35.1", features = ["parking_lot", "tracing"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
tracing = { version = "0.1.40", features = ["log", "release_max_level_info"] }

[[bin]]
name = "backend"
path = "src/main.rs"
